--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <title>Vowel counter</title>
   </head>
   <body>
-    <section class="main">
+    <!-- <section class="main">
       <div class="container pal">
         <input type="text" class="input-text" placeholder="Enter your word / text" />
         <button class="btn">Check</button>
         <p class="result">Result:</p>
       </div>
-    </section>
+    </section> -->
 
-    <script src="script.js"></script>
+    <script src="plugin.js"></script>
+    <script>
+      table({ lat: 60, lon: 10, name: 'Oslo' });
+    </script>
+
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
